src/objects/ADvendio__Mapping_BA__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping definition for Billing &amp; Accounting.</description>
    <fields>
        <fullName>ADvendio__AccountingDate__c</fullName>
        <label>Accounting Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdDayOfWeek__c</fullName>
        <label>AdDayOfWeek</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdHourOfDay__c</fullName>
        <label>AdHourOfDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdKeyValues__c</fullName>
        <label>Ad Key Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdOperatingSystems__c</fullName>
        <label>AdOperatingSystems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecAdTypeExternalName__c</fullName>
        <label>Ad Type External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecAdTypeName__c</fullName>
        <label>Ad Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecDescriptionOnPDF__c</fullName>
        <label>Ad Spec Description On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecDistribution__c</fullName>
        <label>Ad Spec Distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecExternalName__c</fullName>
        <label>Ad Spec External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecName__c</fullName>
        <label>Ad Spec Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecPlacementExternalName__c</fullName>
        <label>Placement External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecPlacementName__c</fullName>
        <label>Placement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecSiteExternalName__c</fullName>
        <label>Site External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecSiteName__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSpecUseExternalNameOnPDF__c</fullName>
        <label>Ad Spec Use External Name on PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdWebBrowsers__c</fullName>
        <label>AdWebBrowsers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingCity__c</fullName>
        <label>Advertiser Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingCountry__c</fullName>
        <label>Advertiser Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingPostalCode__c</fullName>
        <label>Advertiser Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingState__c</fullName>
        <label>Advertiser Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingStreet__c</fullName>
        <label>Advertiser Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserContactEmail__c</fullName>
        <label>Advertiser Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserContactFax__c</fullName>
        <label>Advertiser Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserContactPhone__c</fullName>
        <label>Advertiser Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserContact__c</fullName>
        <label>Advertiser Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserDebitorId__c</fullName>
        <label>Advertiser Debitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserLookup__c</fullName>
        <label>Advertiser Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserName__c</fullName>
        <label>Advertiser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserNumber__c</fullName>
        <label>Advertiser Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserVATId__c</fullName>
        <label>Advertiser VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingCity__c</fullName>
        <label>Agency Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingCountry__c</fullName>
        <label>Agency Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingPostalCode__c</fullName>
        <label>Agency Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingState__c</fullName>
        <label>Agency Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingStreet__c</fullName>
        <label>Agency Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyCommission__c</fullName>
        <label>Agency Commission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyContactEmail__c</fullName>
        <label>Agency Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyContactFax__c</fullName>
        <label>Agency Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyContactPhone__c</fullName>
        <label>Agency Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyContact__c</fullName>
        <label>Agency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyDebitorId__c</fullName>
        <label>Agency Debitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyLookup__c</fullName>
        <label>Agency Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyName__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyNumber__c</fullName>
        <label>Agency Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyVATId__c</fullName>
        <label>Agency VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingCity__c</fullName>
        <label>Beneficiary Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingCountry__c</fullName>
        <label>Beneficiary Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingPostalCode__c</fullName>
        <label>Beneficiary Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingState__c</fullName>
        <label>Beneficiary Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingStreet__c</fullName>
        <label>Beneficiary Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryContactEmail__c</fullName>
        <label>Beneficiary Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryContactFax__c</fullName>
        <label>Beneficiary Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryContactPhone__c</fullName>
        <label>Beneficiary Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryContact__c</fullName>
        <label>Beneficiary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryDebitorId__c</fullName>
        <label>Beneficiary Debitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryLookup__c</fullName>
        <label>Beneficiary Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryName__c</fullName>
        <label>Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryNumber__c</fullName>
        <label>Beneficiary Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryVATId__c</fullName>
        <label>Beneficiary VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillRecordItem__c</fullName>
        <label>Bill Record (Item)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillRecord__c</fullName>
        <label>Bill Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingCategory__c</fullName>
        <label>Billing Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingStatus__c</fullName>
        <label>Billing Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BookedQuantity__c</fullName>
        <label>Booked Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignEnd__c</fullName>
        <label>Campaign End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignStart__c</fullName>
        <label>Campaign Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ConnectedItemId__c</fullName>
        <label>Connected Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactEmail__c</fullName>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactFax__c</fullName>
        <label>Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactFirstName__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactLastName__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactName__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactRole__c</fullName>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactSalutationLetter__c</fullName>
        <description>This field is used to transfer the salutation for contacts selected at a Media Campaign to the object Invoice Contacts.</description>
        <inlineHelpText>Please enter the field path to transfer the salutation for contacts selected at a Media Campaign to the object Invoice Contacts.</inlineHelpText>
        <label>Contact Salutation Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DaysEarlyPaymentDiscount__c</fullName>
        <label>Days Early Payment Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeliveryAutoImport__c</fullName>
        <label>Delivery AutoImport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Dispatch__c</fullName>
        <label>Invoice Dispatch Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DistributionPeriod__c</fullName>
        <description>Defines if values are split with daily or monthly precision.
This refers for automated splits</description>
        <label>Distribution (Period)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DistributionUnit__c</fullName>
        <description>Defines which value (amount or quantity) is split in automated splits.</description>
        <inlineHelpText>Defines which value (amount or quantity) is split in automated splits.</inlineHelpText>
        <label>Distribution (Unit)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Early_Payment_Discount__c</fullName>
        <label>Early Payment Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__EndDate__c</fullName>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalMediaCampaignName__c</fullName>
        <label>External Media Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__GuaranteedAI__c</fullName>
        <label>Guaranteed AI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideContentTargetingOnPDF__c</fullName>
        <label>Hide Content Targeting On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideFCOnPDF__c</fullName>
        <label>Hide FC On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideGeoTargetingOnPDF__c</fullName>
        <label>Hide Geo Targeting On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideKeyValueTargetingOnPDF__c</fullName>
        <label>Hide Key Value Targeting On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HidePublicationDateTargetingOnPDF__c</fullName>
        <label>Hide Publication Date Targeting On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideTechnicalTargetingOnPDF__c</fullName>
        <label>Hide Technical Targeting On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideTimeTargetingOnPDF__c</fullName>
        <label>Hide Time Targeting On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingCity__c</fullName>
        <label>Intermediary Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingCountry__c</fullName>
        <label>Intermediary Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingPostalCode__c</fullName>
        <label>Intermediary Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingState__c</fullName>
        <label>Intermediary Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingStreet__c</fullName>
        <label>Intermediary Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryDebitorId__c</fullName>
        <label>Intermediary Debitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryLookup__c</fullName>
        <label>Intermediary Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryName__c</fullName>
        <label>Intermediary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryNumber__c</fullName>
        <label>Intermediary Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryVATId__c</fullName>
        <label>Intermediary VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceByDelivery__c</fullName>
        <label>Invoice by Delivery</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceRecipientContactEmail__c</fullName>
        <label>Invoice Recipient Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedQuantity__c</fullName>
        <label>Invoiced Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsCPMPrice__c</fullName>
        <label>IsCPMPrice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemDescription__c</fullName>
        <label>Description (Item)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemMaster__c</fullName>
        <label>Item Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemObject__c</fullName>
        <label>Item Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemRateDiscount1__c</fullName>
        <label>Quantity Discount (Item)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemRateDiscount2__c</fullName>
        <label>Customer Discount (Item)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemRateDiscount3__c</fullName>
        <label>Agency Discount (Item)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemRecordType__c</fullName>
        <label>Item Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemThirdPartyCommission__c</fullName>
        <label>Third Party Commission (Item)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemUniquekey__c</fullName>
        <label>Item Uniquekey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemVATExempt__c</fullName>
        <label>VAT-Exempt (Item)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LegalEntityCountry__c</fullName>
        <label>Legal Entity Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Locale__c</fullName>
        <label>Locale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__MasterObject__c</fullName>
        <label>Master Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaign__c</fullName>
        <label>MediaCampaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__OrderExtNumber__c</fullName>
        <label>Ext. Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__OrderNumber__c</fullName>
        <label>Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Package__c</fullName>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PacketItemId__c</fullName>
        <label>Packet Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PacketItemPackage__c</fullName>
        <label>Packet Item Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentDueDate__c</fullName>
        <label>Payment Due Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentInterval__c</fullName>
        <label>Payment Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentStart__c</fullName>
        <label>Payment Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentTerms__c</fullName>
        <label>PaymentTerms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionNumberAppendix__c</fullName>
        <description>Additional field to add after the position number. For example if you have the position number &apos;3&apos; you can add the appendix &apos;.2&apos; to get the joined position number &apos;3.2&apos;</description>
        <label>Position Number Appendix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionNumber__c</fullName>
        <label>Position Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingCity__c</fullName>
        <label>Postal-Recipient Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingCountry__c</fullName>
        <label>Postal-Recipient Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingPostalCode__c</fullName>
        <label>Postal-Recipient Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingState__c</fullName>
        <label>Postal-Recipient Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingStreet__c</fullName>
        <label>Postal-Recipient Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientDebitorId__c</fullName>
        <label>Postal-Recipient Debitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientLookup__c</fullName>
        <label>Postal-Recipient Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientName__c</fullName>
        <label>Postal-Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientNumber__c</fullName>
        <label>Postal-Recipient Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientVATId__c</fullName>
        <label>Postal-Recipient VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Probability__c</fullName>
        <label>Probability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Prorated__c</fullName>
        <label>Prorated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount1__c</fullName>
        <label>Quantity Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount2Name__c</fullName>
        <label>Rate Discount 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount2__c</fullName>
        <label>Customer Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount3__c</fullName>
        <label>Agency Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount4Name__c</fullName>
        <label>Rate Discount 4 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingCity__c</fullName>
        <label>Debtor Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingCountry__c</fullName>
        <label>Debtor Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingPostalCode__c</fullName>
        <label>Debtor Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingState__c</fullName>
        <label>Debtor Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingStreet__c</fullName>
        <label>Debtor Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientContactEmail__c</fullName>
        <label>Debtor Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientContactFax__c</fullName>
        <label>Debtor Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientContactPhone__c</fullName>
        <label>Debtor Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientContact__c</fullName>
        <label>Debtor Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientDebitorId__c</fullName>
        <label>Debtor Debtor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientId__c</fullName>
        <label>Debtor Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientName__c</fullName>
        <label>Debtor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientNumber__c</fullName>
        <label>Debtor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientVATId__c</fullName>
        <label>Debtor VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReverseChargeMechanism__c</fullName>
        <label>Reverse-Charge Mechanism</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SalesRep__c</fullName>
        <label>Sales Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SalesTaxIdNr__c</fullName>
        <label>Sales Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedCityInformation__c</fullName>
        <label>Selected City Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedContentInformation__c</fullName>
        <label>Selected Content Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedCountryInformation__c</fullName>
        <label>Selected Country Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedPublicationDateInformation__c</fullName>
        <label>Selected Publication Date Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedRegionInformation__c</fullName>
        <label>Selected Region Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowOnInvoicePDF__c</fullName>
        <label>Show on Invoice PDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowPacketComponentOnPDF__c</fullName>
        <label>Show Packet Component On PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowThirdPartyCommission__c</fullName>
        <label>Show Third Party Commission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SortOrder__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartDate__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeB2Abs__c</fullName>
        <label>Surcharge (B2) Abs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeB2__c</fullName>
        <label>Surcharge (B2)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SurchargeB3Abs__c</fullName>
        <label>Surcharge (B3) Abs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>